:sparkles:支持用户自定义添加备忘的笔记本，以减少备忘添加步骤
封装备忘添加过程函数，优化代码结构

--- a/Config.plist
+++ b/Config.plist
@@ -21,6 +21,19 @@
 			<string>memo.png</string>
 			<key>Title</key>
 			<string>Create Memo Note in Evernote</string>
+			<key>Restore Pasteboard</key>
+			<string>YES</string>
+		</dict>
+	</array>
+	<key>Options</key>
+	<array>
+		<dict>
+			<key>Option Identifier</key>
+			<string>notebook</string>
+			<key>Option Type</key>
+			<string>string</string>
+			<key>Option Label</key>
+			<string>Save in Notebook</string>
 		</dict>
 	</array>
 </dict>
